# xeryon

./: README.md  __init__.py  communication.py  config.py  pyproject.toml  xeryon_controller.py
src/: Xeryon_HISPEC.py  tcp_communication.py  tcp_xeryon.py
src/config/: settings_FEI_XD24494_20250828.txt  settings_FEI_XD24508_20250902.txt  settings_FEI_XD24514_20250902.txt
src/oem/: Xeryon.py
